--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,7 +4,7 @@
 @use "toolbar.scss";
 @use "frames.scss";
 @use "layerBar.scss";
-@use "picker.scss";
+@use "palette.scss";
 @use "dialog.scss";
 
 * {
