--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -2,10 +2,9 @@
 
 #toolBar {
     position: absolute;
-    top: 6em;
-    left: 0;
+    top: 13em;
+    left: 1em;
     list-style-type: none;
-    background-color: blue;
     z-index: 6;
 
     li button {
