--- a/src/styles/frames.scss
+++ b/src/styles/frames.scss
@@ -19,10 +19,12 @@
     left: 5%;
     border: solid black;
     border-radius: 5px;
+    background-color: white;
 }
 
 #currentFrame {
     border: solid blue;
+    background-color: white;
 }
 
 #animationFrame {
