better project loading and saving

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,7 @@
 @use "editor.scss";
 @use "toolbar.scss";
 @use "frames.scss";
-@use "layerBar.scss";
+@use "layers.scss";
 @use "palette.scss";
 @use "dialog.scss";
 
