--- a/src/styles/colorScheme.scss
+++ b/src/styles/colorScheme.scss
@@ -1,4 +1,25 @@
-$background: white;
+$background: #ebe8e8;
 $primary: lightGray;
 $secondary: gray;
 $terciary: black;
+
+$buttonColorLayers: #fe8019;
+$buttonColorLayersHover: #d65d0e;
+
+$buttonColorLayerbar: #fabd2f;
+$buttonColorLayerbarHover: #d79921;
+
+$buttonColorTools: #ebdbb2;
+$buttonColorToolsHover: #d5c4a1;
+
+$buttonColorPalette: #d3869b;
+$buttonColorPaletteHover: #b16286;
+
+$buttonColorFrames: #b8bb26;
+$buttonColorFramesHover: #98971a;
+
+$buttonColorTopbar: #689d6a;
+$buttonColorTopbarHover: #689d6a;
+
+
+$selected: #cc241d;
