--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -1,41 +1,38 @@
 @use "colorScheme.scss" as *;
 
-$hoverColor: $secondary;
-$backgroundColor: $primary;
-
-#topbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    background-color: $backgroundColor;
-    min-height: 10px;
-    z-index: 10;
-}
-
 .dropdown {
     float: left;
     overflow: hidden;
-    height: 100%;
     text-align: center;
-
-    p {
-        font-size: 0.8em;
-        padding: 4px 4px;
-    }
+    height: 2em;
+    width: 2em;
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+    border-radius: 4px; 
+    border: solid black;
+    background-image: url(images/files.png);
+    background-size: cover;
+    background-color: $buttonColorTopbar;
 
     :hover {
-        background-color: $hoverColor;
+        background-color: $buttonColorTopbarHover;
+    }
+
+    :active {
+        background-color: $buttonColorTopbar;
     }
 }
 
 .dropdownContent {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    z-index: 1;
+    z-index: 100;
+    top: 2.5em;
+    border: solid black;
+    border-radius: 4px;
 
     button {
+        background-color: $buttonColorTopbar;
         float: none;
         color: black;
         padding: 0.2vh;
