--- a/src/styles/colorScheme.scss
+++ b/src/styles/colorScheme.scss
@@ -18,8 +18,13 @@ $buttonColorPaletteHover: #b16286;
 $buttonColorFrames: #b8bb26;
 $buttonColorFramesHover: #98971a;
 
-$buttonColorTopbar: #689d6a;
+$buttonColorTopbar: #8ec07C;
 $buttonColorTopbarHover: #689d6a;
+
+$buttonColorDialog: #83a598;
+$buttonColorDialogHover: #458588;
+
+$backgroundDialog: #928374;
 
 
 $selected: #cc241d;
