--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -40,7 +40,7 @@
         display: block;
         text-align: left;
         outline: none;
-        border: none;
+        border: 1px solid black;
         width: 100%;
     }
 }
