--- a/src/styles/dialog.scss
+++ b/src/styles/dialog.scss
@@ -1,9 +1,43 @@
+@use "colorScheme.scss" as *;
+
 .dialog {
     margin:0 auto;
     position: absolute;
     left: 0;
     right:0;
     top: 50%;
-    border:1px solid;
+    border: solid black;
+    border-radius: 8px;
     padding: 4px;
+    font-size: 1.4em;
+    background-color: $backgroundDialog;
+
+    * {
+        margin: 4px;
+    }
+
+    button {
+        font-size: 1em;
+        border-radius: 8px;
+        box-shadow: none;
+        outline: none;
+        border: solid black;
+        overflow: hidden;
+        padding: 2px;
+        background-color: $buttonColorDialog;
+    }
+
+    input {
+        font-size: 1em;
+        padding: 2px;
+        border-radius: 8px;
+        box-shadow: none;
+        outline: none;
+        border: solid black;
+        overflow: hidden;
+    }
+
+    button:hover {
+        background-color: $buttonColorDialogHover;
+    }
 }
