--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -9,7 +9,8 @@
 
 .editorLayer {
     image-rendering: pixelated;
-    border: 2px solid #000000;
+    border: solid #000000;
+    border-radius: 8px;
     width: 100%;
     height: 100%;
     display: block;
@@ -18,7 +19,8 @@
 
 #editorTemplate {
     image-rendering: pixelated;
-    border: 2px solid #000000;
+    border: solid #000000;
+    border-radius: 8px;
     width: 100%;
     height: 100%;
     display: block;
