better file dialogs

--- a/src/styles/colorScheme.scss
+++ b/src/styles/colorScheme.scss
@@ -10,7 +10,7 @@ $buttonColorLayerbar: #fabd2f;
 $buttonColorLayerbarHover: #d79921;
 
 $buttonColorTools: #ebdbb2;
-$buttonColorToolsHover: #d5c4a1;
+$buttonColorToolsHover: #a89984;
 
 $buttonColorPalette: #d3869b;
 $buttonColorPaletteHover: #b16286;
@@ -24,7 +24,7 @@ $buttonColorTopbarHover: #689d6a;
 $buttonColorDialog: #83a598;
 $buttonColorDialogHover: #458588;
 
-$backgroundDialog: #928374;
+$backgroundDialog: #d5c4a1;
 
 
 $selected: #cc241d;
