--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -48,3 +48,25 @@
 .dropdown:hover .dropdownContent {
     display: block;
 }
+
+#center {
+    display: block;
+    width: 2em;
+    height: 2em;
+    margin: 2px;
+    border-radius: 8px;
+    box-shadow: none;
+    outline: none;
+    border: solid black;
+    overflow: hidden;
+    background-color: $buttonColorTools;
+    image-rendering: pixelated;
+
+    :hover {
+        background-color: $buttonColorTopbarHover;
+    }
+
+    :active {
+        background-color: $buttonColorTopbar;
+    }
+}
