--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -13,14 +13,18 @@
     background-image: url(images/files.png);
     background-size: cover;
     background-color: $buttonColorTopbar;
+    image-rendering: pixelated;
+}
 
-    :hover {
-        background-color: $buttonColorTopbarHover;
+.dropdown:hover {
+    background-color: $buttonColorTopbarHover;
+    .dropdownContent {
+        display: block;
     }
+}
 
-    :active {
-        background-color: $buttonColorTopbar;
-    }
+.dropdown:active {
+    background-color: $buttonColorTopbar;
 }
 
 .dropdownContent {
@@ -43,30 +47,32 @@
         border: 1px solid black;
         width: 100%;
     }
-}
 
-.dropdown:hover .dropdownContent {
-    display: block;
+    button:hover {
+        background-color: $buttonColorTopbarHover;
+    }
 }
 
 #center {
-    display: block;
-    width: 2em;
-    height: 2em;
-    margin: 2px;
-    border-radius: 8px;
-    box-shadow: none;
-    outline: none;
-    border: solid black;
+    float: left;
     overflow: hidden;
-    background-color: $buttonColorTools;
+    text-align: center;
+    height: 2em;
+    width: 2em;
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+    border-radius: 4px; 
+    border: solid black;
+    background-image: url(images/center.png);
+    background-size: cover;
+    background-color: $buttonColorTopbar;
     image-rendering: pixelated;
+}
 
-    :hover {
-        background-color: $buttonColorTopbarHover;
-    }
+#center:hover {
+    background-color: $buttonColorTopbarHover;
+}
 
-    :active {
-        background-color: $buttonColorTopbar;
-    }
+#center:active {
+    background-color: $buttonColorTopbar;
 }
