fixed images in release

--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -35,31 +35,31 @@
 }
 
 #penTool {
-    background-image: url(images/pen.png);
+    background-image: url(../../images/pen.png);
     background-size: cover;
 }
 
 #rulerTool {
-    background-image: url(images/ruler.png);
+    background-image: url(../../images/ruler.png);
     background-size: cover;
 }
 
 #compassTool {
-    background-image: url(images/compass.png);
+    background-image: url(../../images/compass.png);
     background-size: cover;
 }
 
 #filledCircleTool {
-    background-image: url(images/filledCircle.png);
+    background-image: url(../../images/filledCircle.png);
     background-size: cover;
 }
 
 #squareTool {
-    background-image: url(images/square.png);
+    background-image: url(../../images/square.png);
     background-size: cover;
 }
 
 #filledSquareTool {
-    background-image: url(images/filledSquare.png);
+    background-image: url(../../images/filledSquare.png);
     background-size: cover;
 }
