--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -10,7 +10,7 @@
     margin-left: 0.5em;
     border-radius: 4px; 
     border: solid black;
-    background-image: url(images/files.png);
+    background-image: url(../../images/files.png);
     background-size: cover;
     background-color: $buttonColorTopbar;
     image-rendering: pixelated;
@@ -63,7 +63,7 @@
     margin-left: 0.5em;
     border-radius: 4px; 
     border: solid black;
-    background-image: url(images/center.png);
+    background-image: url(../../images/center.png);
     background-size: cover;
     background-color: $buttonColorTopbar;
     image-rendering: pixelated;
