--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -47,7 +47,7 @@
     position: absolute;
     bottom: 0;
     left: 1em;
-    overflow-y: scroll;
+    overflow-y: auto;
     z-index: 6;
 
     button {
