--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -1,6 +1,7 @@
 @use "colorScheme.scss" as *;
 
 #files {
+    position: relative;
     float: left;
     overflow: hidden;
     text-align: center;
@@ -14,7 +15,7 @@
     background-size: cover;
     background-color: $buttonColorTopbar;
     image-rendering: pixelated;
-    z-index: 6;
+    z-index: 8;
 }
 
 #files:hover {
@@ -29,9 +30,8 @@
 }
 
 #filesContent {
+    position: fixed;
     display: none;
-    position: absolute;
-    z-index: 100;
     top: 2.5em;
     border: solid black;
     border-radius: 4px;
@@ -55,6 +55,8 @@
 }
 
 #center {
+    position: relative;
+    z-index: 6;
     float: left;
     overflow: hidden;
     text-align: center;
