--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -63,3 +63,8 @@
     background-image: url(../../images/filledSquare.png);
     background-size: cover;
 }
+
+#eraserTool {
+    background-image: url(../../images/eraser.png);
+    background-size: cover;
+}
