--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -68,3 +68,8 @@
     background-image: url(../../images/eraser.png);
     background-size: cover;
 }
+
+#bucketTool {
+    background-image: url(../../images/bucket.png);
+    background-size: cover;
+}
