--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,9 +7,15 @@
 @use "palette.scss";
 @use "dialog.scss";
 
+@font-face {
+    font-family: "Pixelify Sans";
+    src: url(../../fonts/PixelifySans-Medium.ttf);
+}
+
 * {
 	margin: 0;
 	padding: 0;
+    font-family: "Pixelify Sans";
 }
 
 html,
