--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -47,6 +47,7 @@
         outline: none;
         border: 1px solid black;
         width: 100%;
+        font-size: 1.1em;
     }
 
     button:hover {
