--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -2,15 +2,15 @@
 
 #toolBar {
     position: absolute;
-    top: 5em;
-    left: 1em;
+    top: 80px;
+    left: 16px;
     list-style-type: none;
     z-index: 6;
 
     button {
         display: block;
-        width: 4em;
-        height: 4em;
+        width: 64px;
+        height: 64px;
         margin: 2px;
         border-radius: 8px;
         box-shadow: none;
