--- a/src/styles/frames.scss
+++ b/src/styles/frames.scss
@@ -4,8 +4,8 @@
     display: block;
     position: absolute;
     bottom: 0;
-    right: 1em;
-    width: 10em;
+    right: 16px;
+    width: 160px;
     height: calc(100vh - 24em);
     overflow-y: auto;
     z-index: 6;
@@ -30,9 +30,9 @@
 #animationFrame {
     position: absolute;
     z-index: 5;
-    height: 15em;
-    right: 1em;
-    top: 1em;
+    height: 240px;
+    right: 16px;
+    top: 16px;
     background-color: white;
     border: solid black;
     border-radius: 5px;
@@ -42,14 +42,14 @@
 
 #framesConfig {
     position: absolute;
-    top: 20em;
-    right: 1em;
+    top: 320px;
+    right: 16px;
     display: block;
     z-index: 6;
 
     button {
-        width: 3em;
-        height: 3em;
+        width: 42px;
+        height: 42px;
         margin: 2px;
         border: solid black;
         border-radius: 8px;
@@ -67,8 +67,8 @@
 
 #fpsContainer {
     position: absolute;
-    top: 17em;
-    right: 1em;
+    top: 272px;
+    right: 16px;
     display: block;
     z-index: 6;
 
@@ -77,7 +77,7 @@
     }
 
     input {
-        width: 6em;
+        width: 96px;
         outline: none;
         opacity: 0.7;
     }
