--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,14 +8,14 @@
 @use "dialog.scss";
 
 @font-face {
-    font-family: "Pixelify Sans";
-    src: url(../../fonts/PixelifySans-Medium.ttf);
+    font-family: "Roboto";
+    src: url(../../fonts/Roboto-Medium.ttf);
 }
 
 * {
 	margin: 0;
 	padding: 0;
-    font-family: "Pixelify Sans";
+    font-family: "Roboto";
 }
 
 html,
