--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -5,10 +5,10 @@
     float: left;
     overflow: hidden;
     text-align: center;
-    height: 2em;
-    width: 2em;
-    margin-top: 0.5em;
-    margin-left: 0.5em;
+    height: 32px;
+    width: 32px;
+    margin-top: 8px;
+    margin-left: 8px;
     border-radius: 4px; 
     border: solid black;
     background-image: url(../../images/files.png);
@@ -32,7 +32,7 @@
 #filesContent {
     position: fixed;
     display: none;
-    top: 2.5em;
+    top: 40px;
     border: solid black;
     border-radius: 4px;
 
@@ -61,10 +61,10 @@
     float: left;
     overflow: hidden;
     text-align: center;
-    height: 2em;
-    width: 2em;
-    margin-top: 0.5em;
-    margin-left: 0.5em;
+    height: 32px;
+    width: 32px;
+    margin-top: 8px;
+    margin-left: 8px;
     border-radius: 4px; 
     border: solid black;
     background-image: url(../../images/center.png);
