--- a/src/styles/frames.scss
+++ b/src/styles/frames.scss
@@ -90,3 +90,28 @@
         margin: 4px;
     }
 }
+
+#addFrame {
+    background-image: url(../../images/add.png);
+    background-size: cover;
+}
+
+#removeFrame {
+    background-image: url(../../images/remove.png);
+    background-size: cover;
+}
+
+#duplicateFrame {
+    background-image: url(../../images/duplicate.png);
+    background-size: cover;
+}
+
+#moveFrameUp {
+    background-image: url(../../images/left.png);
+    background-size: cover;
+}
+
+#moveFrameDown {
+    background-image: url(../../images/right.png);
+    background-size: cover;
+}
