--- a/src/styles/layers.scss
+++ b/src/styles/layers.scss
@@ -84,3 +84,23 @@
         background-color: $buttonColorLayers;
     }
 }
+
+#addLayer {
+    background-image: url(../../images/add.png);
+    background-size: cover;
+}
+
+#removeLayer {
+    background-image: url(../../images/remove.png);
+    background-size: cover;
+}
+
+#moveLayerUp {
+    background-image: url(../../images/left.png);
+    background-size: cover;
+}
+
+#moveLayerDown {
+    background-image: url(../../images/right.png);
+    background-size: cover;
+}
