--- a/src/styles/frames.scss
+++ b/src/styles/frames.scss
@@ -107,11 +107,11 @@
 }
 
 #moveFrameUp {
-    background-image: url(../../images/left.png);
+    background-image: url(../../images/up.png);
     background-size: cover;
 }
 
 #moveFrameDown {
-    background-image: url(../../images/right.png);
+    background-image: url(../../images/down.png);
     background-size: cover;
 }
