--- a/src/styles/layers.scss
+++ b/src/styles/layers.scss
@@ -96,11 +96,11 @@
 }
 
 #moveLayerUp {
-    background-image: url(../../images/left.png);
+    background-image: url(../../images/up.png);
     background-size: cover;
 }
 
 #moveLayerDown {
-    background-image: url(../../images/right.png);
+    background-image: url(../../images/down.png);
     background-size: cover;
 }
