--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -94,7 +94,7 @@
     margin-left: 8px;
     border-radius: 4px;
     border: solid black;
-    background-image: url(../../images/center.png);
+    background-image: url(../../images/verticalMirror.png);
     background-size: cover;
     background-color: $buttonColorTopbar;
     image-rendering: pixelated;
@@ -120,7 +120,7 @@
     margin-left: 8px;
     border-radius: 4px;
     border: solid black;
-    background-image: url(../../images/center.png);
+    background-image: url(../../images/horizontalMirror.png);
     background-size: cover;
     background-color: $buttonColorTopbar;
     image-rendering: pixelated;
