--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,7 +9,7 @@
 
 @font-face {
 	font-family: "Roboto";
-	src: url(../../fonts/Roboto-Medium.ttf);
+	src: url("../../fonts/Roboto-Medium.ttf");
 }
 
 * {
